--- a/public/index.html
+++ b/public/index.html
@@ -1,64 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Example</title>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <form id="chat">
-        <input type="text" name="username" placeholder="Type your user">
-        <div class="messages"></div>
-        <input type="text" name="message" placeholder="Type your message">
-        <button type="submit">Send</button>  
-    </form>
-
-    <script type="text/javascript">
-        var socket = io('http://localhost:3000');
-
-        // Renderiza em tela o conteudo da mensagem
-        function renderMessage(message){
-            $('.messages').append('<div class="message"><strong>'+ message.author +'</strong>: '+ message.message +'</div>')
-        }
-
-        // Evento executado no back para retornar mensagens antigas
-        socket.on('previousMessages', function(messages){
-            for (message of messages){
-                renderMessage(message);
-            }
-        });
-
-        // Evento executado no back para receber novas mensagens
-        socket.on('receivedMessage', function(message){
-            renderMessage(message);
-        });
-
-
-        $('#chat').submit(function(event){
-            event.preventDefault();
-
-            var author = $('input[name=username]').val();
-            var message = $('input[name=message]').val();
-          
-            if (author.length && message.length){
-                var messageObject = {
-                    author: author,
-                    message: message,
-                };
-
-                //Renderiza na tela
-                renderMessage(messageObject);
-
-                // Envia para o socket informar outros clients
-                socket.emit('sendMessage', messageObject);
-            }
-
-        });
-    </script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="css/style.css" />
+		<title>My Chat - App</title>
+	</head>
+	<body>
+		<div class="join-container">
+			<header class="join-header">
+				<h1><i class="far fa-comments"></i> My Chat</h1>
+			</header>
+			<main class="join-main">
+				<form action="chat.html">
+					<div class="form-control">
+						<label for="username">Username</label>
+						<input
+							type="text"
+							name="username"
+							id="username"
+							placeholder="Enter username..."
+							required
+						/>
+					</div>
+					<div class="form-control">
+						<label for="room">Room</label>
+						<select name="room" id="room">
+							<option value="Room 1">Room 1</option>
+							<option value="Room 2">Room 2</option>
+							<option value="Room 3">Room 3</option>
+						</select>
+					</div>
+					<button type="submit" class="btn">Join Chat</button>
+				</form>
+			</main>
+		</div>
+	</body>
 </html>
